--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,17 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>
+      <a href="http://www.linkedin.com/in/markfussell/">Linked In</a>
+      &bull;
+      <a href="http://github.com/markfussell/">Github</a>
+      &bull;
+      <a href="http://palobots.org/">PaloBots</a>
+  </p>
+    <!--
+  <ul>
+      <li><a href="http://www.linkedin.com/in/markfussell/">Linked In</a></li>
+      <li><a href="http://github.com/markfussell/">Github</a></li>
+      <li><a href="http://palobots.org/">PaloBots</a></li>
+  </ul>
+  -->
 </section>
